examples/semantics/errors/error14.grace
fun error14 () : nothing
	fun foo(c:char) :nothing;
	fun foo(c:int): nothing
	{
		puti(8);
	}
{
	puti(9);
}
